--- a/forms/login.html
+++ b/forms/login.html
@@ -10,29 +10,32 @@
     </head>
 
     <body>
-        <div class="tpl"> 
-            <div class="logo">
+        <div class="header"> 
+            <div class="header-logo">
                 <img src="../images/UI logo.png" alt="UI logo">
                 <h5 class="dept">DEPARTMENT OF COMPUTER SCIENCE</h5>
                 <h5 class="school">UNIVERSITY OF IBADAN</h5>
             </div>
             
-            <div class="fbtn">
+            <div class="header-buttons">
               <p>Login</p>
               <a href="signup.html"> <button> New student </button> </a>
             </div>
         </div>
 
-        <div class="frmstn">
+        <div class="form-sections-container">
             <h3>Login</h3>
 
             <div class="sect4">
                 <form>
-                    <div>
+                    <div class="form-field">
                         <label for="email">Email</label> <br>
                         <input type="text" id="email" name="email"><br>
+                    <div>
                         <label for="password">Password</label> <br>
                         <input type="text" id="password" name="password"><br>
+                    </div>
+                        
                     </div>
                 </form>
             </div>
