Styled login page

--- a/index.html
+++ b/index.html
@@ -35,11 +35,17 @@
 
         <div class="welcome">
             <h4>It's good to have you here!</h4>
-            <p> <img src="images/illustration.svg" alt="illustration"> 
-                To the new students, congratulations on your admission.<br>
-                 Ensure you complete all stipulated registration processes. <br>
-                To existing students, it’s good to have you back!</p>
-            </div>
+           
+                <section class="sect-left">
+                    <p> To the new students, congratulations on your admission.<br>
+                         Ensure you complete all stipulated registration processes. <br>
+                        To existing students, it’s good to have you back!</p>
+                </section>
+                <section class="sect-right">
+                    <img src="images/illustration.svg" alt="illustration">
+                </section>
+                <br style="clear: both"> 
+        </div>
 
         <div class="news_section">
             <h3>NEWS</h3>
