Styled Signup page

--- a/forms/login.html
+++ b/forms/login.html
@@ -20,7 +20,7 @@
                 </span>
             </div>
             
-            <div class="main-nav-items-container">
+            <div class="main-nav-item">
                 <ul class="main-nav-items">
                     <li class="main-nav-item login"> Login </li>
                     <li class="main-nav-item"> <a href="signup.html"> <button class="signup-btn"> New student </button> </a> </li>
@@ -48,8 +48,6 @@
                 </form>
             </div>
         </div>
-        
         <button class="password-button">Register</button>
-
     </body>
 </html>
